--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
 
             <div class="row">
                 <div class="col-md-12 section-categoria-itens" >
-                    <div class="col-md-2 col-12  categoria-item" id="man">
+                    <div class="col-md-2 col-12  categoria-item" value="men's clothing">
                         <div class="categoria-img">
                             <img src="images/man.png" alt="">
                         </div>
-                        <span>Men's clothing
+                        <span id="man">men's clothing
                         </span>
                     </div>
-                    <div class="col-md-2 col-12 categoria-item"  id="women">
+                    <div class="col-md-2 col-12 categoria-item"  >
                         <div class="categoria-img">
                             <img src="images/woman.png" alt="">
                         </div>
-                        <span>Women's clothing</span>
+                        <span id="women">women's clothing</span>
                     </div>
-                    <div class="col-md-2 col-12 categoria-item" id="diamante">
+                    <div class="col-md-2 col-12 categoria-item" >
                         <div class="categoria-img">
                             <img src="images/diamante.png" alt="">
                         </div>
-                        <span>Jewelery</span>
+                        <span id="diamante">jewelery</span>
                     </div>
 
-                    <div class="col-md-2 col-12 categoria-item" id="eletronicos">
+                    <div class="col-md-2 col-12 categoria-item" >
                         <div class="categoria-img">
                             <img src="images/eletronico.png" alt="">
                         </div>
-                        <span>Electronics</span>
+                        <span id="eletronicos">electronics</span>
                     </div>
 
                 </div>
@@ -166,7 +166,7 @@
         </div>
     
         <div class="footer-section">
-            <p>Telefone: <a href="tel:+53584040692">(53) 8404-0692</a></p>
+            <p>Telefone: <a href="tel:+53584040692">(14) 998579940</a></p>
             <p>E-mail: <a href="mailto:contato@codergame.com">contato@codergame.com</a></p>
         </div>
     
