--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fake Store - JS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,7 +22,7 @@
         <div class="header-top">
             <span>Liquidação de Verão em Todos os Maiôs e Entrega Expressa Grátis - 50% de Desconto!
                 <a href="#">Compre agora!</a></span>
-            <div class="singUp">Entrar</div>
+                <div class="singUp" id="singUp"><a href="#">Entrar</a></div>
         </div>
         <!-- navbar menu --> <!-- navbar menu --> <!-- navbar menu -->
         <div class="container-fluid header-container navbar-light bg-light">
@@ -180,12 +180,12 @@
     
 </body>
 
-  
+    <script src="js/main-loading.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
