--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <!-- navbar fixa no topo --> <!-- navbar fixa no topo -->
         <div class="header-top">
-            <span>Liquidação de Verão em Todos os Maiôs e Entrega Expressa Grátis - 50% de Desconto!
+            <span>10 anos de marchSTORE - 7% de Desconto em todos os produtos!
                 <a href="#">Compre agora!</a></span>
                 <div class="singUp" id="singUp"><a href="#">Entrar</a></div>
         </div>
@@ -162,12 +162,12 @@
     <!-- rodape   --> <!-- rodape   --> <!-- rodape   --> <!-- rodape   --> <!-- rodape   --> <!-- rodape   -->
     <footer>
         <div class="footer-section">
-            <p>&copy; 2024 CoderGAME. Todos os direitos reservados.</p>
+            <p>&copy; 2024 marchSTORE. Todos os direitos reservados.</p>
         </div>
     
         <div class="footer-section">
             <p>Telefone: <a href="tel:+53584040692">(14) 998579940</a></p>
-            <p>E-mail: <a href="mailto:contato@codergame.com">contato@codergame.com</a></p>
+            <p>E-mail: <a href="mailto:olikujy03@gmail.com">olikujy03@gmail.com</a></p>
         </div>
     
         <div class="footer-section">
