--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
@@ -28,7 +29,7 @@
             <div class="box col-md-4 col-11 d-flex flex-column ">
                 <div class="title col-md-12 col-12">Acesse agora!</div>
 
-                <form action="adm.html" method="POST">
+                <form id="formLogin" action="#" method="POST">
                     <div class="login d-flex flex-column col-md-12 col-12">
                         <label for="loginForm">Login</label>
                         <input type="text" class="loginForm" id="loginForm" required>
@@ -36,12 +37,13 @@
                         <label for="passForm">Senha</label>
                         <input type="password" class="passForm" id="passForm" required>
 
-                        <button class="button" type="submit">Entrar</button>
+                        <button class="button" id="buttonEntrar" type="submit">Entrar</button>
                         <span class="signIn">
                             <a id="cadastrar" href="#">Cadastrar</a>
                         </span>
                     </div>
                 </form>
+
 
             </div>
 
@@ -58,7 +60,7 @@
                         <input type="email" class="cadEmail" id="cadEmail" required>
 
                         <label for="cadPass">Senha</label>
-                        <input type="password" class="cadPass" id="cadPass" required>
+                        <input type="password" class="cadPass" id="cadPass" minlength="4" required>
 
                         <button class="button" type="submit">Cadastrar</button>
                         <span class="signIn">
@@ -66,7 +68,7 @@
                         </span>
                     </div>
                 </form>
-
+                
             </div>
             <div class="container-success">
                 <div class="box-success col-md-3 col-10">
@@ -88,7 +90,7 @@
 
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <script src="js/main-loading.js"></script>
     <script src="js/main-login.js"></script>
 </body>
