--- a/adm.html
+++ b/adm.html
@@ -1,11 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style-adm.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css">
 </head>
+
 <body>
-    ainda nada..
+    <div id="menu" class="menu">
+
+        <nav>
+            <div class="title" id="title">
+                <i class="ri-list-unordered"></i>
+                <span>marchSTORE</span>
+            </div>
+
+            <ul>
+                <li class="li active">
+                    <a href="#" id="botaoDashboard" class="sidebar__link ">
+                        <i class="ri-home-fill"></i>
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+
+                <li class="li ">
+                    <a href="#" id="botaoUsuarios" class="sidebar__link">
+                        <i class="ri-user-line"></i>
+                        <span>Usuários</span>
+                    </a>
+                </li>
+
+                <li class="li ">
+                    <a href="#" id="botaoProdutos" class="sidebar__link">
+                        <i class="ri-layout-grid-fill"></i>
+                        <span>Produtos</span>
+                    </a>
+                </li>
+
+                <li class="li ">
+                    <a href="#" id="botaoProdutos" class="sidebar__link">
+                        <i class="ri-group-line"></i>
+                        <span>Clientes</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="logout" id="logout">
+            <i class="ri-logout-box-r-line"></i>
+            <a href="index.html"><span> Sair</span></a>
+        </div>
+    </div>
+
+
+
+    <div class="container-fluid col-md-12">
+
+        <div class="container-fluid header-container navbar-light bg-light">
+            <div class="row">
+                <div class="col-md-10 header-msg">
+                    <span>
+                        <h4>Dashboard</h4>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="container col-md-10">
+            <div class="row  row-boxes col-md-12 d-flex flex-column">
+                <div class="boxes col-md-12 d-flex flex-row">
+
+                    <div class="box col-md-3 d-flex flex-column" id="idUser">
+                        <div class="box-name"> Usuários</div>
+                        <div class="values" id="userValue"></div>
+                    </div>
+                    <div class="box col-md-3 d-flex flex-column" id="idProducts">
+                        <div class="box-name"> Produtos</div>
+                        <div class="values" id="productsValue"></div>
+                    </div>
+                    <div class="box col-md-3 d-flex flex-column" id="idCostumers">
+                        <div class="box-name"> Clientes</div>
+                        <div class="values">17</div>
+                    </div>
+                    
+                   
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+    </div>
+
+    <script src="/js/main-adm.js"></script>
 </body>
+
 </html>
+
