--- a/usuarios.html
+++ b/usuarios.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style-adm.css">
-    <link rel="stylesheet" href="/css/style-usuarios.css">
+    <link rel="stylesheet" href="css/style-adm.css">
+    <link rel="stylesheet" href="css/style-usuarios.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -152,8 +152,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
-    <script src="/js/main-loading.js"></script>
-    <script src="/js/main-usuarios.js"></script>
+    <script src="js/main-loading.js"></script>
+    <script src="js/main-usuarios.js"></script>
    
     
 
