--- a/adm.html
+++ b/adm.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
 
-            <div class="row-informations col-md-10  col-11">
+            <div class="row-informations col-md-10 col-lg-9 col-11">
                 <div class="informacoes col-md-12 col-12 ">
                     <div class="titleVoltar" id="voltar"> Voltar</div>
                     <div class="titleCadastrar" id="cadastrar"> Cadastrar</div>
